--- a/tasks/install-Debian.yml
+++ b/tasks/install-Debian.yml
@@ -13,6 +13,7 @@
   apt:
     name: "{{ java_packages }}"
     state: present
+    update_cache: true
 
 - name: Run common Linux tasks
   include_tasks: install-Linux.yml
