--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,36 +1,15 @@
 ---
-image: docker:git
+variables:
+  ANSIBLE_CONFIG: ${CI_PROJECT_DIR}/ansible.cfg
 
-services:
-  - docker:dind
+stages:
+  - lint
+  - test
 
-before_script:
-  - apk update && apk add --no-cache \
-    autoconf \
-    automake \
-    build-base \
-    curl \
-    docker \
-    gcc \
-    git \
-    libffi-dev \
-    linux-headers \
-    musl-dev \
-    openssh \
-    openssl-dev \
-    py3-cryptography \
-    py3-pip docker \
-    python3-dev
-  - docker info
-  - python3 --version
-  - pip3 install \
-    ansible \
-    ansiblelint \
-    docker \
-    molecule \
-    yamllint
-
-molecule:
-  stage: test
-  script:
-    - molecule test
+include:
+  - remote: https://gitlab.com/megabyte-space/gitlab-ci-templates/-/raw/master/ansible.gitlab-ci.yml
+  - remote: https://gitlab.com/megabyte-space/gitlab-ci-templates/-/raw/master/flake8.gitlab-ci.yml
+  - remote: https://gitlab.com/megabyte-space/gitlab-ci-templates/-/raw/master/markdown.gitlab-ci.yml
+  - remote: https://gitlab.com/megabyte-space/gitlab-ci-templates/-/raw/master/molecule.gitlab-ci.yml
+  - remote: https://gitlab.com/megabyte-space/gitlab-ci-templates/-/raw/master/shellcheck.gitlab-ci.yml
+  - remote: https://gitlab.com/megabyte-space/gitlab-ci-templates/-/raw/master/yaml.gitlab-ci.yml
