--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,68 @@
 ---
-sudo: required
+dist: xenial
+os: linux
 language: python
-python: "3.8"
+python:
+  - "3.8"
 
-services:
-  - docker
+jobs:
+  include:
+    - name: Ubuntu 20.04
+      os: linux
+      dist: focal
+      arch: amd64
+      language: python
+      python:
+        - 3.8
+      before_install:
+        - python --version
+        - pip3 install ansible
+      script:
+        - ROLE_FOLDER=$(basename "$PWD")
+        - sed -i "s/CI_ROLE_NAME/${ROLE_FOLDER}/g" tests/test.yml
+        - ansible --version
+        - ansible-playbook tests/test.yml -i tests/inventory
+    - name: Ubuntu 20.04 (ARM64)
+      os: linux
+      dist: focal
+      arch: arm64
+      language: python
+      python:
+        - 3.8
+      before_install:
+        - python --version
+        - pip3 install ansible
+      script:
+        - ROLE_FOLDER=$(basename "$PWD")
+        - sed -i "s/CI_ROLE_NAME/${ROLE_FOLDER}/g" tests/test.yml
+        - ansible --version
+        - ansible-playbook tests/test.yml -i tests/inventory
+    - name: Mac OS X 10.15.7
+      os: osx
+      osx_image: xcode12.2
+      language: shell
+      before_install:
+        - python --version
+        - pip3 install ansible
+      script:
+        - ROLE_FOLDER=$(basename "$PWD")
+        - sed -i ".bak" "s/CI_ROLE_NAME/${ROLE_FOLDER}/g" tests/test.yml
+        - ansible --version
+        - ansible-playbook tests/test.yml -i tests/inventory
+    - name: Windows 10
+      os: windows
+      language: shell
+      before_install:
+        - choco install python3
+        - python --version
+        - python -m pip install --upgrade pip
+        - pip3 install ansible
+      script:
+        - ROLE_FOLDER=$(basename "$PWD")
+        - sed -i "s/CI_ROLE_NAME/${ROLE_FOLDER}/g" tests/test.yml
+        - ansible --version
+        - ansible-playbook tests/test.yml -i tests/inventory
+      env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
 
-install:
-  - python3 -m pip install molecule
-
-script:
-  - molecule test
+notifications:
+  webhooks: https://galaxy.ansible.com/api/v1/notifications/
