--- a/molecule/virtualbox/converge.yml
+++ b/molecule/virtualbox/converge.yml
@@ -2,6 +2,6 @@
 - name: Converge
   hosts: all
   vars:
-    ansible_user: ansible
+    ansible_user: vagrant
   roles:
     - role: "{{ role_name }}"
