--- a/.travis.yml
+++ b/.travis.yml
@@ -59,7 +59,7 @@ jobs:
         - pip3 install ansible
       script:
         - ROLE_FOLDER=$(basename "$PWD")
-        - sed -i "s/CI_ROLE_NAME/${ROLE_FOLDER}/g" tests/test.yml
+        - sed -i "s/CI_ROLE_NAME/${ROLE_FOLDER}/g" tests/test.yml # TODO: Modify this to add ansible- in front of the role name since that is the naming scheme used on GitHub
         - ansible --version
         - ansible-playbook tests/test.yml -i tests/inventory
       env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
