--- a/molecule/virtualbox/molecule.yml
+++ b/molecule/virtualbox/molecule.yml
@@ -11,6 +11,7 @@ driver:
 lint: |
   yamllint .
   ansible-lint
+  flake8
 platforms:
   - name: Archlinux-Latest
     box: ProfessorManhattan/Base-Archlinux-Desktop
@@ -45,6 +46,11 @@ provisioner:
   inventory:
     group_vars:
       all:
+        virtualbox_test: true
+  options:
+    vvv: true
+  playbooks:
+    converge: converge.yml
 verifier:
   name: ansible
 scenario:
