--- a/molecule/default/create.yml
+++ b/molecule/default/create.yml
@@ -6,7 +6,7 @@
   no_log: "{{ molecule_no_log }}"
   tasks:
     - name: Create Docker container
-      docker_container:
+      community.docker.docker_container:
         name: "{{ item.name }}"
         image: "{{ item.image }}"
         command: "{{ item.command }}"
