--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -109,7 +109,12 @@
       "command": "molecule test"
     },
     {
-      "label": "Test: Run Molecule tests (VirtualBox) and preserve VMs",
+      "label": "Test: Install role on Archlinux and open VM (VirtualBox)",
+      "type": "shell",
+      "command": "molecule converge -s virtualbox"
+    },
+    {
+      "label": "Test: Install role on Ubuntu and open VM (VirtualBox)",
       "type": "shell",
       "command": "molecule converge -s virtualbox"
     }
