--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -52,7 +52,7 @@ platforms:
     privileged: true
     pre_build_image: true
   - name: Ubuntu-20.04
-    image: testtest:latest
+    image: professormanhattan/ansible-molecule-ubuntu2004
     command: /sbin/init
     tmpfs:
       - /run
